--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-h2 {
-color: rgb(60, 60, 207);
-font-style: italic;
-font-weight: 900;
-text-decoration: dashed;
-text-align: center;
-text-decoration: underline;
-
+h1 {
+    display: flex;
+    justify-content: center; 
+    align-items: center;   
+    margin-bottom: 20px;
+    color: #1a0ea1;
 }
+#spag,#steak-chips {
+    color: rgb(60, 60, 207);
+    font-style: italic;
+    font-weight: 900;
+    text-decoration: dashed;
+    text-align: center;
+    text-decoration: underline;
+}
+
 .links {
     text-align: center; 
     margin-top: 20px; 
@@ -38,7 +45,7 @@ h3 {
 
 body {
     font-family: Arial, sans-serif;
-    padding-top: 40px;
+    padding-top: 10px;
     padding-bottom: 40px;
     background-color: #918d8d;
 }
@@ -50,4 +57,100 @@ body {
     background-color: #ffffff;
     box-shadow: 10px 40px 100px rgba(3, 7, 246, 0.1);
     border-radius: 41px;
+}
+.menu {
+    display: flex;
+    justify-content: center;
+    background-color: #918d8d;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+.menu a {
+    color: rgb(50, 41, 218);
+    padding: 14px 20px;
+    text-decoration: none;
+    font-weight: bold;
+    font-family: Arial, sans-serif;
+}
+
+.menu a:hover {
+    color: #fff;
+}
+.menu a + a {
+    margin-left: 10px;
+}
+html {
+    scroll-behavior: smooth;
+}
+
+.feedback-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.feedback-form label {
+    font-size: 18px;
+    margin-bottom: 10px;
+    font-weight: bold;
+    color: #333;
+}
+
+.feedback-form input[type="text"] {
+    width: 80%;
+    height: 100px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
+
+.feedback-form input[type="text"]::placeholder {
+    color: #aaa;
+    font-style: italic;
+}
+
+.feedback-form button {
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.feedback-form button:hover {
+    background-color: #7e7b7b;
+}
+
+
+ul {
+list-style: inside;
+    padding-left: 0;  
+    margin-bottom: 20px;
+    display: grid;
+    justify-self: unset;
+
+}
+
+ul li {
+
+    padding-left: 20px;
+    font-size: 16px; 
+    line-height: 1.6; 
+    margin-bottom: 10px;
+}
+
+ul li:hover {
+    background-color: #f0f0f0; 
+    border-radius: 5px;        
+}
+
+section ul {
+    border-left: 3px solid #333;
+    padding-left: 20px;          
 }
